footer alignment fixed

--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,10 @@ body {
 h1, h2, h3, h4, h5, h6 {
 	font-family: proxima-nova, sans-serif;
 }
+h1 {
+	font-size: 32px;
+	font-weight: 900;
+}
 h2 {
 	font-size: 22px;
 	font-weight: bold;
@@ -260,15 +264,20 @@ footer .four-column {
 	.hero img {
 		width: 100%;
 	}
+	footer .footer-content {
+		padding-left: 4em;
+	}
 	footer .six-column {
+		display: inline-block;
 		float: left;
 		width: 45%;
 	}
 	footer .four-column {
+		display: inline-block;
 		float: left;
-		width:25%;
-		margin-right: 1em;
-		padding-top: .75em;
+		width:auto;
+		padding-right: 1em;
+		padding-left: 7em;
 	}
 	.footer .line span {
 		display: inline-block;
@@ -288,14 +297,14 @@ footer .four-column {
 		margin-right: 10px;
 		margin-left: 16px;
 		}
-	.footer p {
+/*	.footer p {
 		padding-left: 4em;
 	}
 	.footer h5 {
 		padding-left: 4em;
-	}
+	}*/
 	.footer .cta {
-		padding-left: 3.5em;
+		padding-top: 2em;
 	}
 	.footer a {
 		color: #fff;
@@ -362,7 +371,7 @@ footer .four-column {
 		/*width: 72%;*/
 		/*padding-bottom: 290px;*/
 		margin-top: 0;
-		margin-bottom: 15em;
+		margin-bottom: 5em;
 	}
 	.casestudies .left {
 		float: left;
@@ -446,24 +455,28 @@ footer .four-column {
 	.about-hero .container {
 		width: auto;
 	}
-/*	.about .left {
-		border-top: none;
-		/*width: 80%;*/
-	}*/
-/*	.about-hero img {
+	.about-hero img {
 		width: 100%;
-	}*/
-/*	.about .right {
-		float: right;
-	}*/
-	.about .container {
+	}
+	.about-hero .container {
 		width: auto;
 	}
-	.text-content p {
+	.about .row {
+		padding-bottom: 2em;
+		padding-top: 3em;
+		display: inline-block;
+		width: 80%;
+	}
+	.about .eight-column {
+		width: 85%;
+		padding-left: 10%;
+		float: right;
+	}
+	.about-body p {
 		font-family: freight-text-pro, serif;
-		width: 65%;
+/*		width: 65%;*/
 		/*font-size: .85em;*/
-		line-height: 1.5em;
+		line-height: 1.8em;
 		padding-bottom: 1em;
 	}
 	.hero .line span {
@@ -562,11 +575,11 @@ footer .four-column {
 		width: 70%;
 	}
 	.casestudy .eight-column {
-		border-top: none;
+/*		border-top: none;*/
 		width: 85%;
 		padding-left: 10%;
 		float: right;
-		display: inline-block;
+/*		display: inline-block;*/
 	}
 	.casestudy .row {
 		padding-bottom: 2em;
@@ -640,7 +653,7 @@ footer .four-column {
 		width: 90%;
 	}
 	footer h3 {
-		margin-top: 4em;
+/*		margin-top: 4em;*/
 	}
 	footer h4 {
 		margin-top: 4em;
